@@ -15,6 +15,7 @@ Cacti CHANGELOG
 -bug: Allow read_config_option to force a database refresh when one is wanted.
 -bug: Fix issue with the script server where a function called where a data query without the <extra_args> does not work.
 -bug: Make load average script compatible with Mac OS X systems.
+-bug: Add the missing sort header functions.
 
 0.8.6h
 -bug#0000383: Add more verbose RRDtool debug output from Graph Management.
